<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"

    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/white"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/valor_A"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/ET_valorA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:inputType="number"
        android:hint="@string/digite_A"
        android:textColorHint="@color/black"
        android:minHeight="48dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/valor_B"
        android:textColor="@color/black"
        />

    <EditText
        android:id="@+id/ET_valorB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:inputType="number"
        android:hint="@string/digite_B"
        android:textColorHint="@color/black"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/btn_Soma"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/Soma"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/btn_sub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/Subtracao"
        android:textColor="@color/black"/>


    <Button
        android:id="@+id/btn_mult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/Multiplicacao"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/btn_div"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/Divisao"
        android:textColor="@color/black"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/res"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/tv_res"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/valor_res"
        android:textSize="16sp"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/btn_historico"
        android:layout_marginTop="64dp"
        android:text="@string/historico"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"/>
</LinearLayout>